--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.13.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.4.0"
   },
   "scripts": {
