reversig change with pins from jpg to png

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wonderful-lexus",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kirilchristov.github.io/wonderful/",
+  "homepage": ".",
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@testing-library/jest-dom": "^4.2.4",
